# meeting-mind

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  com.meetingmind.agent.plist  config.example.yaml  context-recall.spec  dev.jamiewhite.contextrecall.agent.plist  meetingmind.spec  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
scripts/: build_daemon.sh  create_dmg.sh  generate_icons.py  install.sh  remove_legacy_meetingmind.sh
src/: __main__.py  audio_capture.py  audio_preflight.py  calendar_matcher.py  detector.py  diariser.py  live_transcriber.py  main.py  pyannote_diariser.py  scheduler.py  silent_input_detector.py  summariser.py  templates.py  transcriber.py
tests/: conftest.py  test_action_items_extractor.py  test_analytics.py  test_api.py  test_api_action_items_crud.py  test_api_auth.py  test_api_calendar.py  test_api_config.py  test_api_devices.py  test_api_diagnostics.py  test_api_notifications.py  test_api_preflight.py  test_api_prep.py  test_api_reprocess.py  test_api_search.py  test_api_series_crud.py  test_api_speakers.py  test_api_support_bundle.py  test_api_templates.py  test_audio_capture.py  test_audio_preflight.py  test_config.py  test_config_edge_cases.py  test_config_intelligence.py  test_db_edge_cases.py  test_db_migration_v10.py  test_db_migration_v9.py  test_detector.py  test_diariser.py  test_embeddings.py  test_events.py  test_integration_pipeline.py  test_live_transcriber.py  test_markdown_writer.py  test_notifications.py  test_notion_writer.py  test_orchestrator.py  (+9 more)
(+113 files in other folders)
